kubernetes/apps/observability/grafana/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: grafana-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: grafana-operator
    egress:
      - toFQDNs:
          - matchName: grafana.com # dashboards
          - matchName: raw.githubusercontent.com # custom dashboards
          - matchName: storage.googleapis.com # plugins
        toPorts:
          - ports:
              - port: "443"
